# kond-royalties-agent

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/skills/dsu-dia-critico/: SKILL.md
.context/: README.md  architecture-notes.md  next-session.md  project-status.md  validated-commands.md
config/: bigquery_sources.yml  column_dictionary.yml  postgres_sources.yml
docs/: antigravity-mcp-config.example.json  architecture.md  claude-desktop-mcp-config.example.json  codex-mcp-config.example.toml  mcp-config.example.json
etl/: backfill_traffic_attribution.sql  bronze_dim_session_traffic.sql  bronze_ga4_events_click.sql  bronze_ga4_events_ecommerce.sql  bronze_ga4_events_pageview.sql  bronze_ga4_events_sessionstart.sql  bronze_ga4_events_submit.sql  silver_ga4_clicks.sql  silver_ga4_ecommerce.sql  silver_ga4_general_traffic.sql  silver_ga4_pageview.sql  sync_bq_dataset.sh
mcp_server/: README.md  bigquery.py  catalog.py  contracts.md  dsu_analytics.py  mcp_http.py  mcp_stdio.py  models.py  oauth.py  planner.py  postgres.py  prompt_loader.py  query_builder.py  query_runner.py  responder.py  server.py  service.py  settings.py
prompts/: examples_pt_br.md  system_pt_br.md
reporting/: README.md
scripts/: deploy.sh  install_mcp_config.py
semantic_catalog/: catalog.yml
tests/: test_catalog_exists.py  test_catalog_payload.py  test_dataset_accuracy.py  test_dsu_analytics.py  test_mcp_stdio.py  test_planner.py  test_query_builder.py  test_responder.py  test_settings.py  test_sources_config_exists.py
