[project]
name = "kond-royalties-agent"
version = "0.1.0"
description = "Agente analítico da KOND com MCP, Postgres e relatórios de royalties de artistas."
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "jinja2>=3.1.4",
  "pydantic>=2.10.3",
  "pyyaml>=6.0.2",
  "reportlab>=4.2.5",
  "requests>=2.32.0",
]

[project.scripts]
kond-royalties-mcp = "mcp_server.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.2",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server"]

[tool.pytest.ini_options]
markers = ["slow: requires Postgres access (deselect with '-m not slow')"]

[tool.ruff]
line-length = 100
